[package]
name = "tokomak"
version = "0.1.0"
authors = ["Heres, Daniel <danielheres@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = "0.6.0"
datafusion = "4.0"
arrow = "4.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
